add scene : step_defender - chipmunk - MoveScene

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -175,6 +175,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\step_clickclick_game_test_BlockScene.cpp" />
     <ClCompile Include="..\Classes\step_clickclick_game_BlockView.cpp" />
     <ClCompile Include="..\Classes\step_clickclick_game_Processor.cpp" />
+    <ClCompile Include="..\Classes\step_defender_chipmunk_MoveScene.cpp" />
     <ClCompile Include="..\Classes\step_defender_parallax_node_BasicScene.cpp" />
     <ClCompile Include="..\Classes\step_defender_parallax_node_RatioCheckScene.cpp" />
     <ClCompile Include="..\Classes\step_defender_chipmunk_BasicScene.cpp" />
@@ -362,6 +363,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\step_clickclick_game_test_BlockScene.h" />
     <ClInclude Include="..\Classes\step_clickclick_game_BlockView.h" />
     <ClInclude Include="..\Classes\step_clickclick_game_Processor.h" />
+    <ClInclude Include="..\Classes\step_defender_chipmunk_MoveScene.h" />
     <ClInclude Include="..\Classes\step_defender_parallax_node_BasicScene.h" />
     <ClInclude Include="..\Classes\step_defender_parallax_node_RatioCheckScene.h" />
     <ClInclude Include="..\Classes\step_defender_chipmunk_BasicScene.h" />
