--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -714,6 +714,9 @@
     <ClCompile Include="..\Classes\step_defender_chipmunk_BasicScene.cpp">
       <Filter>src\scene\step_06_defender\chipmunk</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\step_defender_chipmunk_MoveScene.cpp">
+      <Filter>src\scene\step_06_defender\chipmunk</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -1293,6 +1296,9 @@
       <Filter>src\scene\step_06_defender\parallax_node</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\step_defender_chipmunk_BasicScene.h">
+      <Filter>src\scene\step_06_defender\chipmunk</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_defender_chipmunk_MoveScene.h">
       <Filter>src\scene\step_06_defender\chipmunk</Filter>
     </ClInclude>
   </ItemGroup>
