add scene : step_defender - chipmunk - GravityScene

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -720,6 +720,9 @@
     <ClCompile Include="..\Classes\step_defender_chipmunk_ContactScene.cpp">
       <Filter>src\scene\step_06_defender\chipmunk</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\step_defender_chipmunk_GravityScene.cpp">
+      <Filter>src\scene\step_06_defender\chipmunk</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -1305,6 +1308,9 @@
       <Filter>src\scene\step_06_defender\chipmunk</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\step_defender_chipmunk_ContactScene.h">
+      <Filter>src\scene\step_06_defender\chipmunk</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_defender_chipmunk_GravityScene.h">
       <Filter>src\scene\step_06_defender\chipmunk</Filter>
     </ClInclude>
   </ItemGroup>
