--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -176,6 +176,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\step_clickclick_game_BlockView.cpp" />
     <ClCompile Include="..\Classes\step_clickclick_game_Processor.cpp" />
     <ClCompile Include="..\Classes\step_defender_chipmunk_ContactScene.cpp" />
+    <ClCompile Include="..\Classes\step_defender_chipmunk_GravityScene.cpp" />
     <ClCompile Include="..\Classes\step_defender_chipmunk_MoveScene.cpp" />
     <ClCompile Include="..\Classes\step_defender_parallax_node_BasicScene.cpp" />
     <ClCompile Include="..\Classes\step_defender_parallax_node_RatioCheckScene.cpp" />
@@ -365,6 +366,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\step_clickclick_game_BlockView.h" />
     <ClInclude Include="..\Classes\step_clickclick_game_Processor.h" />
     <ClInclude Include="..\Classes\step_defender_chipmunk_ContactScene.h" />
+    <ClInclude Include="..\Classes\step_defender_chipmunk_GravityScene.h" />
     <ClInclude Include="..\Classes\step_defender_chipmunk_MoveScene.h" />
     <ClInclude Include="..\Classes\step_defender_parallax_node_BasicScene.h" />
     <ClInclude Include="..\Classes\step_defender_parallax_node_RatioCheckScene.h" />
