add class : step_defender - tool - TileSheetNode

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -750,6 +750,12 @@
     <ClCompile Include="..\Classes\step_defender_game_TileMapNode.cpp">
       <Filter>src\scene\step_06_defender\game</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\step_defender_tool_TileSheetNode.cpp">
+      <Filter>src\scene\step_06_defender\tool</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\step_defender_tool_test_TileSheetNodeScene.cpp">
+      <Filter>src\scene\step_06_defender\tool</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -1357,6 +1363,12 @@
     </ClInclude>
     <ClInclude Include="..\Classes\step_defender_game_TileMapNode.h">
       <Filter>src\scene\step_06_defender\game</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_defender_tool_TileSheetNode.h">
+      <Filter>src\scene\step_06_defender\tool</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_defender_tool_test_TileSheetNodeScene.h">
+      <Filter>src\scene\step_06_defender\tool</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
