--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -186,6 +186,8 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\step_defender_chipmunk_BasicScene.cpp" />
     <ClCompile Include="..\Classes\step_defender_game_TileMapNode.cpp" />
     <ClCompile Include="..\Classes\step_defender_tool_ParallaxLayerEditorScene.cpp" />
+    <ClCompile Include="..\Classes\step_defender_tool_test_TileSheetNodeScene.cpp" />
+    <ClCompile Include="..\Classes\step_defender_tool_TileSheetNode.cpp" />
     <ClCompile Include="..\Classes\step_mole_AnimationComponent.cpp" />
     <ClCompile Include="..\Classes\cpg_Animation_Index.cpp" />
     <ClCompile Include="..\Classes\step_defender_RootScene.cpp" />
@@ -382,6 +384,8 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\step_defender_chipmunk_BasicScene.h" />
     <ClInclude Include="..\Classes\step_defender_game_TileMapNode.h" />
     <ClInclude Include="..\Classes\step_defender_tool_ParallaxLayerEditorScene.h" />
+    <ClInclude Include="..\Classes\step_defender_tool_test_TileSheetNodeScene.h" />
+    <ClInclude Include="..\Classes\step_defender_tool_TileSheetNode.h" />
     <ClInclude Include="..\Classes\step_mole_AnimationComponent.h" />
     <ClInclude Include="..\Classes\cpg_Animation_Index.h" />
     <ClInclude Include="..\Classes\cpg_Animation_Info.h" />
